# wf-reg-test

./: #test.py#  .#test.py  .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  README.rst  REPRODUCING.md  TODO.md  analysis.ipynb  build_env.sh  cookiecutter_replay.json  data.yaml  errors.txt  flake.nix  gpu_pipelines.txt  key  log  main.tf  pylintrc  pyproject.toml  r-dataverse.txt  script.py  setup_env.sh  spack.lock.example  spack.spec  spack.yaml  test.py
.github/workflows/: main.yaml
backup/: data.0.yaml  data.1.yaml  data.2.yaml
data/: download.sh  index.yaml  machines.yaml  nf-core_executions.pkl  nf-core_executions.yaml  nf-core_revisions.yaml  nf-core_workflows.yaml  results.html  snakemake-workflow-catalog_executions.pkl  snakemake-workflow-catalog_executions.yaml  snakemake-workflow-catalog_revisions.yaml  snakemake-workflow-catalog_workflows.yaml
docs/: 404.html  analysis.ipynb  data_analysis.ipynb  dataplan.md  flake.nix  icse_nier.docx  icse_nier.md  icse_nier.txt  main.bib  ncsa_delta_proposal.md  next-pub.tex  plan.md  prs_and_issues.md  results.html  script.sh  textify.py
docs/ncsa_delta_proposal/: index.md  main.bib
docs/reports/: acm_rep.md  acm_rep_pres.html  acm_rep_pres.md  better_poster.sty  flake.nix  icse_nier.md  main.bib  ncsa_delta_proposal.md  nlit.html  nlit.md  overview.html  overview.md  poster.tex  reproducibility_for_science.tex  script.sh  template.latex
engines/nextflow/: flake.nix  spack.yaml
engines/snakemake/: spack.yaml
parsl_configs/: azure.py  local.py  ssh_config.py
postproc/: analysis.ipynb
spack/: .ignore  build_env.sh  setup_env.sh  spack.spec  spack.yaml  upload_env.sh
stubs/toolz/: __init__.pyi
stubs/upath/: __init__.pyi
stubs/upath/implementations/: __init__.pyi  cloud.pyi
terraform/: .gitignore  build.sh  delete_unattached.sh  deploy.sh  hotfix.sh  key  main.tf  ssh_config  vms.tf
tests/: test_main.py
wf_reg_test/: #util.py#  .#util.py  __main__.py  config.py  data.py  data_log.yaml  data_utils.py  engines.py  examine_errors.py  executable.py  high_level_errors.py  html_helpers.py  parallel_execute.py  post_process.py  postprocess.py  registries.py  report.py  repos.py  secrets.py  serialization.py  spack.py  test_all.py  util.py  workflows.py  workflows2.py
