[tool.poetry]
name = "wf-reg-test"
version = "0.1.0"
description = ""
authors = ["Samuel Grayson <sam@samgrayson.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/charmoniumQ/wf-reg-test"


keywords = [""]
classifiers = [
	"Operating System :: OS Independent",
	"Typing :: Typed",
	"Natural Language :: English",
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers","Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--quiet --doctest-modules --doctest-glob='*.rst'"
testpaths = [
		  "tests"
]

[tool.coverage.run]
branch = true
data_file = "build/.coverage"

[tool.coverage.html]
directory = "build/htmlcov"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'if self\.debug',
    'raise AssertionError',
    'raise NotImplementedError',
    'if False:',
    'if __name__ == .__main__.:',
	'if TYPE_CHECKING',
    '@(abc\.)?abstractmethod',
    '\w*\.\.\.$',
    '\w*pass$',
]

# [tool.pylint]
# Too long for inclusion here
# see pylintrc

[tool.mypy]
strict = true
pretty = true
error_summary = true
color_output = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

[tool.poetry.dev-dependencies]
isort = "^5.10.0"
black = "^22.3.0"
pylint = "^2.11.1"
pytest = "^6.2.5"
radon = "^5.1.0"
"charmonium.async-subprocess" = "^0.1.7"
typer = "^0.4.0"
# termcolor = "^1.1.0"
typing-extensions = "^4.1.1"
# ipython = "^7.29.0"
# ipdb = "^0.13.9"
types-setuptools = "^57.4.10"
types-toml = "^0.10.4"
types-termcolor = "^1.1.3"
# rest
types-requests = "^2.28.10"
types-PyYAML = "^6.0.11"
tqdm-stubs = "^0.2.1"
azure-cli = "^2.43.0"
pandas-stubs = "^1.5.2"
mypy = "^0.991"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
# make sure to keep the Python versions here consistent with those tested by Tox (tool.tox.legacy_tox_ini.tox.envlist).
PyGithub = "^1.55"
GitPython = "^3.1.27"
xxhash = {git = "https://github.com/charmoniumQ/python-xxhash", rev = "add-types"}
PyYAML = "^6.0"
install = "^1.3.5"
domonic = "^0.9.11"
"charmonium.time-block" = "^0.3.0"
parsl = "^2022.10.31"
"charmonium.freeze" = "^0.6.0"
#dask = {extras = ["distributed"], version = "^2022.10.2"}
fasteners = "^0.18"
adlfs = "^2022.11.2"
msgraph-core = "^0.2.2"
universal-pathlib = "^0.0.21"
tqdm = "^4.64.1"
toolz = "^0.12.0"
pymc = "^5.0.1"
graphviz = "^0.20.1"
jupyter = "^1.0.0"
pandas = "^1.5.2"
arviz = "^0.14.0"
matplotlib = "^3.6.2"
